# diffmpm

./: .gitignore  CITATION.cff  README.md  diffmpm-1dbar-old.py  diffmpm-1dbar.py  inverse_solver.ipynb  jax_port.org  optim_benchmark.py  pyproject.toml  requirements.txt  scheme.py  solver.py  utitlity_functions_benchmarks.py
.github/workflows/: python-package.yml
benchmarks/2d/plate_with_hole/: entity_sets.json  particles-2d-plate-with-hole.json  plate-with-hole.toml  test_benchmark.py  testing.ipynb
benchmarks/2d/uniaxial_nodal_forces/: entity_sets.json  mpm-nodal-forces.toml  particles-2d-nodal-force.json  (+1 more)
diffmpm/: __init__.py  constraint.py  element.py  explicit.py  forces.py  functions.py  io.py  material.py  mesh.py  mpm.py  node.py  particle.py  scheme.py  shapefn.py  solver.py  utils.py  writers.py
diffmpm/cli/: mpm.py
diffmpm/materials/: __init__.py  _base.py  linear_elastic.py  newtonian.py  simple.py
docs/diffmpm/: constraint.html  element.html  forces.html  functions.html  index.html  io.html  material.html  mesh.html  node.html  particle.html  pbar.html  plot.html  scheme.html  solver.html  utils.html  writers.html
examples/: input_1d.toml  input_2d.toml  inverse_solver_2d.ipynb  inverse_solver_2d.py  mpm-nodal-forces.toml  mpm-uniaxial-stress.toml  optim_1d.py  optim_benchmark.py  particles-1d.json  particles-2d-uniaxial-stress.json  simple_1d.py  simple_1d_file.py  simple_2d.py  simple_2d_file.py
test/: test_mesh.py  test_shapefn.py
tests/: test_bingham.py  test_element.py  test_material.py  test_newtonian.py  test_particle.py
(+8 files in other folders)
