[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diffmpm"
description = "Differential MPM library"
authors = [
        { name="Krishna Kumar" },
        { name="Chahak Mehta", email="chahakmehta013@gmail.com" }
]
readme = "README.md"
version = "0.0.1"
dependencies = [
    "jax[cpu]",
]
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: MIT License",
            "Operating System :: OS Independent",
]

[tool.black]
line-length = 80
